--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>5.2.0-M1</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok-maven-plugin</artifactId>
+                        <version>1.18.20.0</version>
+                        <scope>provided</scope>
+                    </dependency>
                 </dependencies>
                 <!--configuration>
                     <excludes>
@@ -59,6 +65,12 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>5.3.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-maven-plugin</artifactId>
+            <version>1.18.20.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
