--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M4</version> <!-- Use version 3.0.0-M4 -->
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.8.0</version>
+                        <version>1.2.0</version>
+                        <scope>test</scope>
                     </dependency>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
@@ -40,6 +41,19 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <repository>
+            <id>cx-platform</id>
+            <name>CX Platform Repository</name>
+            <url>https://cxaf.jfrog.io/artifactory/cx-platform</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!-- Other dependencies -->
