--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,8 @@
                         <groupId>org.testng</groupId>
                         <artifactId>testng</artifactId>
                         <version>7.4.0</version>
-                        <scope>test</scope>
+                        <scope>compile</scope>
                     </dependency>
-
                 </dependencies>
             </plugin>
         </plugins>
@@ -77,6 +76,5 @@
             <version>3.11.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 </project>
