--- a/pom.xml
+++ b/pom.xml
@@ -7,35 +7,26 @@
     <groupId>org.example</groupId>
     <artifactId>Term_paper</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>3.0.0-M4</version>
                 <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.2.0-M1</version>
-                    </dependency>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.2.0-M1</version>
+                        <version>5.8.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.projectlombok</groupId>
-                        <artifactId>lombok-maven-plugin</artifactId>
-                        <version>1.18.20.0</version>
-                        <scope>provided</scope>
+                        <artifactId>lombok</artifactId>
+                        <version>1.18.20</version>
+                        <scope>compile</scope>
                     </dependency>
                 </dependencies>
-                <!--configuration>
-                    <excludes>
-                        <exclude>com.driver.test.VehicleTest</exclude>
-                    </excludes>
-                </configuration-->
             </plugin>
         </plugins>
     </build>
@@ -46,6 +37,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <repository>
+            <id>cx-platform</id>
+            <name>CX Platform Repository</name>
+            <url>https://cxaf.jfrog.io/artifactory/cx-platform</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- Other dependencies -->
         <dependency>
@@ -55,22 +59,16 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.0</version>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.4.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.3.1</version>
+            <version>3.11.2</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok-maven-plugin</artifactId>
-            <version>1.18.20.0</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
